# compylr

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
src/compylr/: __init__.py  app.py  main.py  nuitka_options.py
src/compylr/nuitka/: __init__.py  builder.py  option.py  sections.py
src/compylr/theme/: __init__.py  dark.py  fonts.py  light.py  manager.py
src/compylr/widgets/: __init__.py  animated_toggle.py  log_terminal.py  option_row.py  purple_button.py  scrollable_frame.py  section_card.py  styled_dropdown.py  styled_entry.py  styled_text_area.py
src/pyler/: app.py  main.py  theme.py  widgets.py
