[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compylr"
version = "1.0.0"
authors = [{ name = "Thisal-D" }]
license = { file = "LICENSE" }
description = "A modern GUI desktop app to compile Python scripts to Windows executables using Nuitka"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "customtkinter>=5.2.0",
  "nuitka>=2.0",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: Microsoft :: Windows",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Desktop Environment",
  "License :: OSI Approved :: MIT License",
  "Environment :: Win32 (MS Windows)",
]

keywords = [
  "nuitka", "compiler", "exe", "executable", "python", "gui",
  "customtkinter", "build", "packager", "windows"
]

[project.urls]
homepage   = "https://github.com/Thisal-D/compylr"
repository = "https://github.com/Thisal-D/compylr"
issues     = "https://github.com/Thisal-D/compylr/issues"

[project.scripts]
compylr = "pyler.main:main"

[tool.setuptools.packages.find]
where = ["src"]